Update Play Service library, and add test case to indicate the bug of PullToRefreshActivity
1. updated Play Service lib to 11.6.0
2. resolved previous commit merge issue (corrupted MainApplication class)
3. added sample data to indicate the pull to refresh bug on PullToRefreshActivity

Signed-off-by: Jack Cheung <jack@jackcheung.com>

--- a/UltimateRecyclerView/app/src/main/res/layout/floating_view.xml
+++ b/UltimateRecyclerView/app/src/main/res/layout/floating_view.xml
@@ -24,6 +24,7 @@
         fab:urv_fab_colorNormal="#ffffff" />
 
     <com.marshalchen.ultimaterecyclerview.ui.floatingactionbutton.FloatingActionButton
+        android:id="@+id/starButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         fab:icon="@drawable/urv_floating_action_button_ic_fab_star"
