--- a/UltimateRecyclerView/app/src/main/res/values/dimens.xml
+++ b/UltimateRecyclerView/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="common.rowHeight">48dp</dimen>
+
 
     <dimen name="margin_standard">16dp</dimen>
     <dimen name="margin_short">8dp</dimen>
